testsuite/tests/properties/invalid_new_node/list_synth.lkt
import common

@synthetic class LiteralList: ASTList[Literal] {
    @memoized fun prop(): LiteralList = LiteralList()
}
